# tarot-robobot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  amvera.env.example  amvera.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_llm_usage_logs.py  003_chat_messages.py  004_user_partner_birth_date.py  005_premium_product_type.py
docs/: admin.md  deploy-amvera.md  deploy-vps.md  numerology.md
prompts/daily_morning/: mini.yaml
prompts/evening_spread/: full.yaml
prompts/followup/: full.yaml
prompts/forecast_month/: full.yaml  mini.yaml
prompts/love/: full.yaml  mini.yaml
prompts/negative/: full.yaml  mini.yaml
prompts/numerology_portrait/: mini.yaml
prompts/question/: full.yaml  mini.yaml
prompts/wealth/: full.yaml  mini.yaml
prompts/weekly_horoscope/: full.yaml
scripts/: amvera_env_checklist.sh  deploy_amvera.sh  docker-entrypoint-bot.sh  init_local_db.py  run_dashboard.sh  run_local.sh  start_production.sh  stop_local.sh
scripts/server/: _scp_expect.exp  _ssh_expect.exp  bootstrap-remote.sh  build-server-env.py  build-server-env.sh  deploy.sh  install-autodeploy-cron.sh  setup-vps.sh
src/: __init__.py  config.py  constants.py  main.py
src/bot/: __init__.py  keyboards.py  logging_bot.py  onboarding_flow.py  onboarding_guard.py  states.py
src/dashboard/: __main__.py  app.py
src/db/: models.py  repositories.py  session.py
src/engines/: astro.py  numerology.py  tarot.py
tests/: test_engines.py  test_prompts.py  test_token_billing.py
(+29 files in other folders)
